add calorie table and endpoint for calorie for get and post
